[package]
name = "dca"
version = "1.0.2"
authors = ["aidan <aidan@calculated.fi>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
base = { path = "../../packages/base" }
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.1.1"
cw-storage-plus = "0.15.0"
cw2 = "0.15.0"
enum-as-inner = "0.5.1"
fin-helpers = { path = "../../packages/fin-helpers" }
kujira = "0.7.16"
schemars = "0.8.10"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
staking-router = { path = "../staking-router" }
thiserror = { version = "1.0.31" }
cosmwasm-schema = "1.1.1"

[dev-dependencies]
cw-multi-test = "0.15.0"
rand = "0.8.5"
