[package]
name = "dca"
version = "1.0.4"
authors = ["aidan <aidan@calculated.fi>"]
edition = "2021"
exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
chrono = { version = "0.4.22", default-features = false }
cosmwasm-schema = "1.1.1"
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.1.1"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
osmosis-std = "0.15.3"
prost = "0.11.8"
schemars = "0.8.10"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cw-multi-test = "0.16.4"
rand = "0.8.5"

[profile.release]
overflow-checks = true
